--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Ideas</h1>
-<p><b>Mariposa AU</b><br>AKA: Yosano is Mori's biological daughter. This changes things.</p>
+<p><b><a href="https://bungoustraypups.github.io/ciosbsdficideas/mariposa.html">Mariposa AU</a></b><br>AKA: Yosano is Mori's biological daughter. This changes things.</p>
